--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # DataSource settings: set here your own configurations for the database
 
-spring.datasource.url = jdbc:mysql://localhost:3306/sampledb?autoReconnect=true&useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/contraderjava?autoReconnect=true&useSSL=false
 spring.datasource.username = root
 spring.datasource.password = root
 
@@ -9,12 +9,13 @@ spring.datasource.password = root
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
+spring.datasource.initialization-mode=always
 
 # Show or not log for each sql query
 spring.jpa.show-sql = false
 
 # Hibernate ddl auto (create, create-drop, update)
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 
 # Naming currentStrategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
